@@ -5,6 +5,8 @@ CHANGES IN CUPS V1.3.10
 
 	- Documentation fixes (STR #2994, STR #2995, STR #3008, STR #3056,
 	  STR #3057)
+	- The scheduler incorrectly compared Mac OS X UUIDs for access
+	  control, preventing access in certain configurations.
         - The IPP backend incorrectly reset the required authentication
 	  to Kerberos when authentication failed.
 	- The scheduler no longer looks up the local hostname by default;
